2009-05-17  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac compilation changes.

	* Glasses/GTSRetriangulator.cxx:
	Add missing include (for mac).

	* Makefile:
	Generalize glib-2.0 pkg-config invocation for cpp/ld flags - need
	to cross check on linux.

2007-08-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Added function GenerateTriangle();
	in Tesselate() use mid-edge split by default.

2007-07-09  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSIsoMaker.cxx:
	* Glasses/GTSIsoMaker.h:
	Added fucntion SetX/Y/ZAxis() to setup min,max and number of
	divisions in one call.

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Removed mScale member; added Rescale() function.

	* Rnr/GL/GTSurf_GL_Rnr.cxx:
	Member mScale was removed from the model class.

2007-03-30  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSRetriangulator.cxx:
	* Glasses/GTSurf.cxx:
	Changes for root-5-15-04 (increased modularity).

2007-02-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSIsoMaker.cxx:
	In MakeSurface(): use two-step initialization of TF3 to avoid
	warnings when not all variables x, y and z are stated.

2006-10-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSRetriangulator.h:
	Changed ranges/steps of some data-members to more reasonable values.

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Added method 'vod ExportTring(const Text_t* fname)' to dump data
	into a trivial text-file; set 'bUseDisplayList' to true by
	default.

	* Rnr/GL/GTSurf_GL_Rnr.cxx:
	Fix indentation.

2006-05-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* Makefile:
	Use pkg-config to obtain cflags/libs; use glib-2.0.

2006-04-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSRetriangulator.cxx:
	* Glasses/GTSRetriangulator.h:
	Added local member (Double_t mRunTime) to store the duration of
	the last operation.

2006-04-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSRetriangulator.cxx:
	* Glasses/GTSRetriangulator.h: