@@ -1,3 +1,9 @@
+2010-07-10  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Rnr/GL/GTSurf_GL_Rnr.cxx:
+	* Rnr/GL/GTSurf_GL_Rnr.h:
+	Enable normal scaling ... gts doesn't do it anymore.
+
 2009-05-17  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	Mac compilation changes.
